<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2008, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<!-- The attributes in this XML file provide configuration information -->
<!-- for the Input Method Manager. -->

<input-method xmlns:android="http://schemas.android.com/apk/res/android"
        android:settingsActivity="io.github.sds100.keymapper.inputmethod.latin.settings.SettingsActivity"
        android:isDefault="@bool/im_is_default"
        android:supportsSwitchingToNextInputMethod="true">
    <subtype android:icon="@drawable/ic_ime_switcher_dark"
            android:label="@string/subtype_generic"
            android:subtypeId="0xc9194f97"
            android:imeSubtypeLocale="en_AU"
            android:imeSubtypeMode="keyboard"
            android:imeSubtypeExtraValue="TrySuppressingImeSwitcher,AsciiCapable,SupportTouchPositionCorrection,EmojiCapable"
            android:isAsciiCapable="true"
    />
    <subtype android:icon="@drawable/ic_ime_switcher_dark"
            android:label="@string/subtype_en_US"
            android:subtypeId="0xc9194f98"
            android:imeSubtypeLocale="en_US"
            android:languageTag="en-US"
            android:imeSubtypeMode="keyboard"
            android:imeSubtypeExtraValue="TrySuppressingImeSwitcher,AsciiCapable,SupportTouchPositionCorrection,EmojiCapable"
            android:isAsciiCapable="true"
    />
    <subtype android:icon="@drawable/ic_ime_switcher_dark"
            android:label="@string/subtype_en_GB"
            android:subtypeId="0xb045e755"
            android:imeSubtypeLocale="en_GB"
            android:languageTag="en-GB"
            android:imeSubtypeMode="keyboard"
            android:imeSubtypeExtraValue="TrySuppressingImeSwitcher,AsciiCapable,SupportTouchPositionCorrection,EmojiCapable"
            android:isAsciiCapable="true"
    />
    <subtype android:icon="@drawable/ic_ime_switcher_dark"
            android:label="@string/subtype_generic"
            android:subtypeId="0x1dc3a859"
            android:imeSubtypeLocale="be_BY"
            android:imeSubtypeMode="keyboard"
            android:imeSubtypeExtraValue="KeyboardLayoutSet=east_slavic,EmojiCapable"
            android:isAsciiCapable="false"
    />
    <subtype android:icon="@drawable/ic_ime_switcher_dark"
            android:label="@string/subtype_generic"
            android:subtypeId="0x763a8752"
            android:imeSubtypeLocale="ru"
            android:imeSubtypeMode="keyboard"
            android:imeSubtypeExtraValue="SupportTouchPositionCorrection,EmojiCapable"
            android:isAsciiCapable="false"
    />
    <subtype android:icon="@drawable/ic_ime_switcher_dark"
            android:label="@string/subtype_generic"
            android:subtypeId="0x3e84492c"
            android:imeSubtypeLocale="uk"
            android:imeSubtypeMode="keyboard"
            android:imeSubtypeExtraValue="KeyboardLayoutSet=east_slavic,EmojiCapable"
            android:isAsciiCapable="false"
    />
    <subtype android:icon="@drawable/ic_ime_switcher_dark"
            android:label="@string/subtype_no_language_qwerty"
            android:subtypeId="0xa239ebad"
            android:imeSubtypeLocale="zz"
            android:imeSubtypeMode="keyboard"
            android:imeSubtypeExtraValue="KeyboardLayoutSet=qwerty,AsciiCapable,EnabledWhenDefaultIsNotAsciiCapable,EmojiCapable"
            android:isAsciiCapable="true"
    />
</input-method>
